--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mdast-util-find-and-replace": "^2.2.2",
     "mdast-util-to-hast": "^12.3.0",
     "mdast-util-to-string": "^3.2.0",
+    "medium-to-markdown": "^0.0.3",
     "micromorph": "^0.4.5",
     "plausible-tracker": "^0.3.8",
     "preact": "^10.14.1",
